# gbopt

./: .gitignore  CMakeLists.txt  Doxyfile  GBoptConfig.cmake.in
cmake/: CPPCheck.cmake
include/gbopt/: cmdline.hpp  cmdline_validation.hpp  delimiter.hpp  utils.hpp
src/: CMakeLists.txt  cmdline.cpp  delimiter.cpp
tests/: CMakeLists.txt  cmdline_tests.cpp
tools/: make-dist
